// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders correctly with docs in it 1`] = `
<div
  className="app"
>
  <div
    className="topRow"
  >
    <Searchbox
      onSearch={[Function]}
    />
    <UploadButton
      onUpload={[Function]}
    />
  </div>
  <Documents
    actions={
      Object {
        "deleteImage": [Function],
      }
    }
    docs={
      Array [
        Object {
          "name": "someName.png",
          "size": 200,
        },
      ]
    }
  />
</div>
`;

exports[`App renders correctly with no docs 1`] = `
<div
  className="app"
>
  <div
    className="topRow"
  >
    <Searchbox
      onSearch={[Function]}
    />
    <UploadButton
      onUpload={[Function]}
    />
  </div>
  <Documents
    actions={
      Object {
        "deleteImage": [Function],
      }
    }
    docs={Array []}
  />
</div>
`;
